# industryintel-ai-platform

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  dependencies.py  main.py
app/agents/: __init__.py  base.py
app/agents/analyst/: __init__.py  agent.py  extraction.py  models.py  prompts.py
app/agents/critic/: __init__.py  agent.py  evaluation.py  models.py  prompts.py
app/agents/planner/: __init__.py  agent.py  models.py  prompts.py
app/agents/researcher/: __init__.py  agent.py  models.py  prompts.py  query_generator.py  reranker.py  scoring.py  (+1 more)
app/core/: config.py  errors.py  logging.py  tracing.py
app/services/: evaluation_service.py  llm_service.py  memory_service.py  pdf_service.py
app/tools/: __init__.py  faiss_retriever.py
deployment/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.ollama  entrypoint.sh
docs/: architecture.md  business_research_workflow.md  deployment.md
evaluation/: __init__.py  judges.py  metrics.py  runner.py  test_cases.py
frontend/: app.py
frontend/components/: agent_workflow.py  citation_viewer.py  download_report.py  evaluation_dashboard.py  observability_dashboard.py  progress_tracker.py  report_viewer.py  topic_input.py
frontend/styles/: theme.css
frontend/utils/: api_client.py
tests/: conftest.py
tests/api/: test_evaluation_routes.py  test_human_approval.py  test_observability_routes.py  test_pdf_endpoint.py
tests/services/: test_evaluation_service.py  test_llm_service.py  test_memory_service.py  test_pdf_service.py
(+22 files in other folders)
