[project]
name = "autonomous-research-platform"
version = "0.1.0"
description = "AI business research analyst agent platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "langchain>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langgraph>=0.2,<0.3",
  "langsmith>=0.1,<0.2",
  "langchain-ollama>=0.3,<1",
  "langchain-community>=0.3,<0.4",
  "faiss-cpu>=1.9,<2",
  "sentence-transformers>=3.0,<4",
  "sse-starlette>=2.0,<3",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
